@@ -113,7 +113,7 @@
           </widget>
           <packing>
             <property name="x">445</property>
-            <property name="y">450</property>
+            <property name="y">480</property>
           </packing>
         </child>
         <child>
@@ -130,7 +130,7 @@
             <signal name="clicked" handler="gtk_main_quit"/>
           </widget>
           <packing>
-            <property name="y">450</property>
+            <property name="y">480</property>
           </packing>
         </child>
         <child>
@@ -144,7 +144,7 @@
             <property name="use_markup">True</property>
           </widget>
           <packing>
-            <property name="y">368</property>
+            <property name="y">404</property>
           </packing>
         </child>
         <child>
@@ -155,7 +155,7 @@
             <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
           </widget>
           <packing>
-            <property name="y">400</property>
+            <property name="y">435</property>
           </packing>
         </child>
         <child>
@@ -164,6 +164,7 @@
             <property name="height_request">145</property>
             <property name="visible">True</property>
             <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
+            <property name="label_xalign">0</property>
             <child>
               <widget class="GtkAlignment" id="alignment1">
                 <property name="visible">True</property>
@@ -210,6 +211,7 @@
                         <property name="receives_default">True</property>
                         <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                         <property name="label" translatable="yes">List of cheatcodes</property>
+                        <property name="use_underline">True</property>
                         <property name="response_id">0</property>
                         <signal name="clicked" handler="on_button_cheat_clicked"/>
                       </widget>
@@ -235,6 +237,39 @@
           </widget>
           <packing>
             <property name="y">220</property>
+          </packing>
+        </child>
+        <child>
+          <widget class="GtkCheckButton" id="no_format_option">
+            <property name="width_request">174</property>
+            <property name="height_request">36</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="label" translatable="yes">do not format partition</property>
+            <property name="use_underline">True</property>
+            <property name="response_id">0</property>
+            <property name="draw_indicator">True</property>
+          </widget>
+          <packing>
+            <property name="x">16</property>
+            <property name="y">370</property>
+          </packing>
+        </child>
+        <child>
+          <widget class="GtkCheckButton" id="persist_option">
+            <property name="width_request">394</property>
+            <property name="height_request">36</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="label" translatable="yes">Initializing persistent overlay
+(file using 50% of the available size)</property>
+            <property name="use_underline">True</property>
+            <property name="response_id">0</property>
+            <property name="draw_indicator">True</property>
+          </widget>
+          <packing>
+            <property name="x">198</property>
+            <property name="y">370</property>
           </packing>
         </child>
       </widget>
