@@ -1,8 +1,14 @@
 install-usb-gui (0.2.18) UNRELEASED; urgency=low
+  !!! DO NOT RELEASE, before x-un-i check in new fll-installer !!!
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 12 May 2008 18:45:42 +0200
+  [ Horst Tritremmel ]
+  * checkbox do not format added
+  * checkbox persist added
+
+ -- Horst Tritremmel <hjt@sidux.com>  Thu, 05 Jun 2008 16:17:00 +0200
 
 install-usb-gui (0.2.17) unstable; urgency=low
 
